# logmich

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  flake.nix  logmich-config.cmake.in  logmich.nix
include/logmich/: log.hpp  logger.hpp
src/: logger.cpp  logmich.cpp  logmich.hpp  main.cpp
test/: test_logmich.cpp  test_logmich.expected.stderr  test_logmich.sh
tests/: main.cpp
